media-queried font-sizes, extra paddings, margins, fixed footer not taking 100%

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -3,20 +3,25 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
+    /* width: 100%; */
 }
 
 body{
     /* background-color: var(--purp-deep);
     width: 100%; */
+    width: 100%;
     background-color: #240046;
     /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='199' viewBox='0 0 100 199'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M0 199V0h1v1.99L100 199h-1.12L1 4.22V199H0zM100 2h-.12l-1-2H100v2z'%3E%3C/path%3E%3C/g%3E%3C/svg%3E"); */
     /* background-image: url("data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.4'%3E%3Cpath d='M36 34v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zm0-30V0h-2v4h-4v2h4v4h2V6h4V4h-4zM6 34v-4H4v4H0v2h4v4h2v-4h4v-2H6zM6 4V0H4v4H0v2h4v4h2V6h4V4H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); */
     background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23c77dff' fill-opacity='0.1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+    position: absolute;
+    box-sizing: content-box;
 }
 
 :root{
     --purp-dark: #10002B;
     --purp-dark-05: #10002B88;
+    --purp-dark-03: #10002B55;
     --purp-deep: #240046;
     --purp-deep-05: #24004688;
     --purp-deep-02: #24004633;
@@ -43,6 +48,21 @@ body{
     font-weight: 300;
 }
 
+.collapse-icon{
+    font-size: 36px;
+}
+
+@media (max-width: 760px){
+    .section-title{
+        font-size: 24px;
+    }
+    .collapse-icon{
+        font-size: 24px;
+    }
+}
+
+
+
 .title-important{
     text-decoration: underline;
     text-underline-offset: 2px;
@@ -58,6 +78,26 @@ body{
 .hover-underline:hover{
     text-decoration: underline;
     cursor:pointer;
+}
+
+
+.wip::after{
+    content: "WIP";
+    background-color: var(--purp-dark-05);
+    width: 100%;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+    pointer-events: none;
+    /* align-items: flex-start;
+    justify-content: flex-end; */
+    /* transform: translateX(-5px); */
+    /* z-index: 5; */
 }
 
 /* .base1{
